# wkx-beacon

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  ROADMAP.md  beacon.toml  caddy.snippet  compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-plugin-framework-via-entry-points.md  0002-authn-belongs-to-the-host-platform.md  0003-filesystem-store-no-database.md
docs/standards/: python.md
docs/superpowers/plans/: 2026-07-04-beacon-mvp.md
docs/superpowers/specs/: 2026-07-04-wkx-beacon-architecture.html  2026-07-04-wkx-beacon-design.md  2026-07-04-wkx-beacon-viewer-mock.html
src/wkx_beacon/: __init__.py  __main__.py  _logging.py  bootstrap.py  config.py  exceptions.py  pipeline.py  scheduler.py  store.py
src/wkx_beacon/plugin/: __init__.py  conformance.py  contracts.py  discovery.py
src/wkx_beacon/plugins/: email_ses.py  html_renderer.py
src/wkx_beacon/plugins/aws_cost/: __init__.py  collector.py
src/wkx_beacon/plugins/aws_cost/templates/: cost.html.j2
src/wkx_beacon/web/: app.py
src/wkx_beacon/web/templates/: _runs.html.j2  base.html.j2  index.html.j2  report.html.j2  run.html.j2
tests/: fakes.py  test_cli.py  test_config.py  test_end_to_end.py  test_exceptions.py  test_logging.py  test_pipeline.py  test_scheduler.py  test_store.py
tests/plugin/: test_conformance.py  test_contracts.py  test_discovery.py
tests/plugins/: test_aws_cost.py  test_email_ses.py  test_html_renderer.py
tests/web/: test_app.py
