[project]
name = "wkx-beacon"
version = "0.1.0"
description = "Reports about the platform beacon runs on: collected, rendered, stored, announced."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Everett Toews" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1",
    "apscheduler>=3.10,<4",
    "croniter>=2",
    "boto3>=1.35",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "typer>=0.15",
]

[project.scripts]
beacon = "wkx_beacon.__main__:main"

[project.entry-points."wkx_beacon.collectors"]
aws-cost = "wkx_beacon.plugins.aws_cost:AwsCostCollector"

[project.entry-points."wkx_beacon.renderers"]
html = "wkx_beacon.plugins.html_renderer:HtmlRenderer"

[project.entry-points."wkx_beacon.notifiers"]
email-ses = "wkx_beacon.plugins.email_ses:EmailSesNotifier"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wkx_beacon"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.8",
    "ty>=0.0.1",
    "httpx2>=2.5",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = ["error"]

[tool.ty.src]
include = ["src"]
